--- a/modules/task_manager/locale/fr_FR.po
+++ b/modules/task_manager/locale/fr_FR.po
@@ -210,39 +210,39 @@ msgctxt "field:res.team,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:task_manager.team_group_relation,create_date:"
+msgctxt "field:res.team-res.group,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:task_manager.team_group_relation,create_date_:"
+msgctxt "field:res.team-res.group,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:task_manager.team_group_relation,create_uid:"
+msgctxt "field:res.team-res.group,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:task_manager.team_group_relation,group:"
+msgctxt "field:res.team-res.group,group:"
 msgid "Group"
 msgstr "Groupe"
 
-msgctxt "field:task_manager.team_group_relation,id:"
+msgctxt "field:res.team-res.group,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:task_manager.team_group_relation,rec_name:"
+msgctxt "field:res.team-res.group,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:task_manager.team_group_relation,team:"
+msgctxt "field:res.team-res.group,team:"
 msgid "Team"
 msgstr "Equipe"
 
-msgctxt "field:task_manager.team_group_relation,write_date:"
+msgctxt "field:res.team-res.group,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:task_manager.team_group_relation,write_uid:"
+msgctxt "field:res.team-res.group,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -302,7 +302,7 @@ msgctxt "model:res.team,name:"
 msgid "Team"
 msgstr "Equipe"
 
-msgctxt "model:task_manager.team_group_relation,name:"
+msgctxt "model:res.team-res.group,name:"
 msgid "Team - Group Relation"
 msgstr "Relation Equipe - Groupe"
 
