--- a/modules/insurance_contract/locale/fr_FR.po
+++ b/modules/insurance_contract/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -515,7 +515,7 @@ msgid "Parent"
 msgstr "Parent"
 
 msgctxt "field:contract.covered_element,party:"
-msgid "Actor"
+msgid "Party"
 msgstr "Acteur"
 
 msgctxt "field:contract.covered_element,party_compl_data:"
