Fix refactoring side-effects

--- a/modules/insurance_contract_subscription/locale/fr_FR.po
+++ b/modules/insurance_contract_subscription/locale/fr_FR.po
@@ -192,14 +192,10 @@ msgctxt "view:contract.covered_data:"
 msgid "Covered Data"
 msgstr "Données de Couverture"
 
-msgctxt ""
-msgctxt ""
-msgctxt ""
-"wizard_button:contract.subscribe,process_parameters,action:"
+msgctxt "wizard_button:contract.subscribe,process_parameters,action:"
 msgid "Start Process"
 msgstr "Démarrer le processus"
 
-msgctxt ""
-"wizard_button:contract.subscribe,process_parameters,end:"
+msgctxt "wizard_button:contract.subscribe,process_parameters,end:"
 msgid "Cancel"
 msgstr "Annuler"
